# Marshalling

./: CMakeLists.txt  DOUBLE.hsbrdg  FLOAT.hsbrdg  Hashtable.hsbrdg  README.md  U16.hsbrdg  U32.hsbrdg  U64.hsbrdg  array.hsbrdg  string.hsbrdg  test.hsbrdg
data/: BOOL.hsbrdg  DOUBLE.hsbrdg  FLOAT.hsbrdg  Hashtable.hsbrdg  U16.hsbrdg  U32.hsbrdg  U64.hsbrdg  U8.hsbrdg  pidor.hsbrdg  string.hsbrdg  test.hsbrdg
lib_src/: array.cpp  array.h  core.h  object.cpp  object.h  primitive.h  root.h  serialization.h
src/: main.cpp  serialization.h
src/hashtable/: hashtable.h
src/hashtable/test/: test.h
src/serialization/: array.cpp  array.h  core.cpp  core.h  data.h  lib.h  object.cpp  object.h  primitive.cpp  primitive.h  root.h
src/serialization/test/: testArray.h  testObject.h  testPrimitive.h  testSerialize.h  testString.h
src/user/: main.cpp
test/: testObject.h  testPrimitive.h  testString.h
